[package]
name = "nmea_filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nmea = { git="https://github.com/Tsuiban/nmea.git", branch="develop", version="0.1.1" }
clap = {version="4.3.0", features=["derive"] }
chrono = "0.4.26"
